# mingw64-windows

./: .gitignore  Cargo.toml
data/: available_packages_file1.txt  available_packages_file1.zst  available_packages_file2.txt  available_packages_file2.zst  available_packages_file3.txt  available_packages_file3.zst  available_packages_file4.txt  available_packages_file4.zst  installed_packages_file.txt  installed_packages_file.zst
src/: cli.rs  main.rs
src/commands/: available_packages.rs  cache.rs  dependencies.rs  errors.rs  installed_packages.rs  installer.rs  mod.rs  packages.rs  paths.rs  repositories.rs  utils.rs
