[package]
name = "pmw"
version = "0.1.0"
authors = ["programingjd <programingjd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
ansi_term = "0.12.1"
rm_rf = "0.6.0"
junction = "0.2.0"

reqwest = { version = "0.10.10", features = ["blocking"] }
scraper = "0.12.0"
regex = "1.4.2"
zstd = "0.6.0"
xz-decom = "0.2.0"
inflate = "0.4.5"
tar = "0.4.30"

[dev-dependencies]
cool_asserts = "1.0.3"