[package]
name = "pmw"
version = "0.1.0"
authors = ["programingjd <programingjd@gmail.com>"]
edition = "2018"

[[bin]]
name = "pmw"
path = "src/cli.rs"

[dependencies]
lazy_static = "1.4.0"
clap = { version = "3.0.0-beta.2", features = ["color"] }
ansi_term = "0.12.1"
rm_rf = "0.6.0"
junction = "0.2.0"
reqwest = { version = "0.10.10", features = ["blocking"] }
regex = "1.4.2"
zstd = "0.6.0"
xz-decom = "0.2.0"
inflate = "0.4.5"
tar = "0.4.30"
